2000-05-24	Fernando Ruiz Casas <fernando.ruiz@ctv.es>

	* libc/ttyname.c (ttyname_r): Removed duplicate call to closedir().
	* libc/getpwent.c: Create a more robust /etc/passwd and /etc/group.
	* libc/base_fs.c: Change permissions of files and directories.  Now uses
	octal constants.

2001-05-11	Joel Sherrill <joel@OARcorp.com>

	* libc/write.c: Change type of rc to match return type from
	underlying function per report from Eric Norum.

2001-04-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.in: Add [-ansi -fasm] to RTEMS_PROG_CC_FOR_TARGET.

2001-04-24	Joel Sherrill <joel@OARcorp.com>

 	* libc/libio.c (rtems_libio_allocate): Make sure size and offset
	fields are cleared on each file open.  Before this field was cleared,
	this resulted in the value from the last time that IOP was used
	being still in place.  Discovered by  Andrew Bythell
	<abythell@nortelnetworks.com>.
	* libc/open.c: Remove redundant setting of iop->offset.

2001-04-20  Correo Fernando-ruiz <correo@fernando-ruiz.com>

	* include/rtems/libio_.h, libc/chroot.c, libc/privateenv.c:
	Private environment and chroot() enhancements and fixes.  Comments:
	  + privateenv has been modified to let at chroot() to be more
	    POSIX like Sergei Organov recommended.
	  + A task owner lets that rtems_set_private_env() will be
	    called twice or more times.
	  + chroot() can be called without a previous
	    rtems_set_private_env(); (transpanrently)
	  + The second call of rtems_set_private_env() makes a internal
	    chroot("/") into global imfs_root.
	  + chroot() runs like chdir() without a previous chdir("/") with
	    the global root.
	  + The current directory can be in a wrong place like Linux and 
	    many other Unices.

2001-04-16      Joel Sherrill <joel@OARcorp.com>

	* include/rtc.h: New file.
	* include/Makefile.am: Updated to reflect above.

2001-02-06	Joel Sherrill <joel@OARcorp.com>

	* include/ioccom.h: Unreferenced and thus removed.
